--- a/Assignments/BP3_Assignment.ipynb
+++ b/Assignments/BP3_Assignment.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "5. Iterations\n",
     "\n",
-    "When you have completed your assignment, please commit the changes to your GitHub repository's 'Assignments' folder, as instructed in the [Assignments section](https://learntodiscover.github.io/L2D-Handbook/section7.html) of the [L2D Handbok](https://learntodiscover.github.io/L2D-Handbook).\n"
+    "When you have completed your assignment, please commit the changes to your GitHub repository's 'Assignments' folder, as instructed in the [Assignments section](https://learntodiscover.github.io/L2D-Handbook/section7.html) of the [L2D Handbook](https://learntodiscover.github.io/L2D-Handbook).\n"
    ]
   },
   {
